--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         </plugins>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>source/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
