--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -25,4 +25,4 @@ commands:
     aliases: r
   sort:
     description: Sorts visualized & scrambled wool data
-    usage: /<command>
+    usage: /<command> <sort method>
